# stepsight

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: __init__.py  main.py  requirements.txt  run.sh  setup.cfg
backend/app/: __init__.py
backend/app/models/: __init__.py  activity.py
backend/app/routes/: activities.py
backend/tests/: test_api.py
frontend/: package-lock.json  package.json
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: App.tsx.html  index.html  index.tsx.html
frontend/public/: index.html  manifest.json
frontend/src/: App.test.tsx  App.tsx
