# Package metadata
[metadata]
name = stepsight-backend
version = 0.1.0
description = API backend for StepSight fitness data explorer
long_description = StepSight backend service package
long_description_content_type = text/plain
author = drewrelmas
license = MIT
license_files = ../LICENSE

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.12
install_requires =
    fastapi==0.129.2
    uvicorn==0.41.0
    pandas==3.0.1
include_package_data = True

[options.packages.find]
where = .

[options.extras_require]
test =
    pytest==9.0.2
    httpx==0.28.1

# Pytest configuration for backend testing
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --tb=short
    --strict-markers
    -ra

# Coverage configuration
[coverage:run]
source = app/
omit = 
    */tests/*
    */venv/*
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError